concord_macros/tests/dsl/fail/fail_behavior_empty_list_defaults.stderr
error: empty behavior list; expected at least one behavior name
 --> tests/dsl/fail/fail_behavior_empty_list_defaults.rs:8:22
  |
8 |             behavior []
  |                      ^
